# SDRPlusPlus

./: CMakeLists.txt  make_macos_bundle.sh  make_windows_package.ps1  readme.md
.github/workflows/: build_all.yml
core/backends/android/: android_backend.h  backend.cpp
core/src/: core.cpp
docker_builds/debian_bookworm/: do_build.sh
docker_builds/debian_bullseye/: do_build.sh
docker_builds/debian_buster/: do_build.sh
docker_builds/ubuntu_bionic/: do_build.sh
docker_builds/ubuntu_noble/: do_build.sh
docker_builds/ubuntu_oracular/: do_build.sh
misc_modules/discord_integration/discord-rpc/: CMakeLists.txt
source_modules/hydrasdr_rfone_source/: CMakeLists.txt
source_modules/hydrasdr_rfone_source/src/: main.cpp
source_modules/hydrasdr_source/: CMakeLists.txt
source_modules/hydrasdr_source/src/: main.cpp
